update month name inside of the multimodalcot.tr.mdx

--- a/pages/techniques/multimodalcot.tr.mdx
+++ b/pages/techniques/multimodalcot.tr.mdx
@@ -12,4 +12,4 @@ Multimodal CoT modeli (1B), ScienceQA kıyaslamasında GPT-3.5'ten daha iyi perf
 Resim Kaynağı: [Zhang et al. (2023)](https://arxiv.org/abs/2302.00923)
 
 Daha Fazla Bilgi:
-- [Language Is Not All You Need: Aligning Perception with Language Models](https://arxiv.org/abs/2302.14045) (Feb 2023)
+- [Language Is Not All You Need: Aligning Perception with Language Models](https://arxiv.org/abs/2302.14045) (Şubat 2023)
